--- a/debian/changelog
+++ b/debian/changelog
@@ -1,179 +1,17 @@
-allmon3 (1.2.0-1) unstable; urgency=medium
+asl-usage (1.0.0-1.deb12) stable; urgency=medium
 
-  * Fix missing await in ws_voter keepalive (fix #191)
-  * Fix reloading user database when called in USR1 handler (fix #192)
-  * Only enable Apache2 modules in postinst when apache2 is installed (fix #195)
-  * Re-add missing python3-websockets dependency in debian/control (fix #196)
-  * Fix default CSS custom variables to match core code (fix #197)
-  * Fix and enforce correct mode and owner on password-containing files (fix #201)
-  * Fix `allmon3-passwd` from overwriting elements out of order in `users` (fix #204)
-  * Clear"Login Failure" message on next success (fix #205)
-  * `custom.css` supports customizing the Node Transmit Line (fix #208)
+  * Autobuild of 1.0.0-1 for deb12
 
- -- Jason McCormick <jason@mfamily.org>  Tue, 26 Dec 2023 11:28:53 -0500
+ -- Jason McCormick <jason@mfamily.org>  Sun, 09 Jun 2024 12:26:25 -0400
 
-allmon3 (1.1.1-1) unstable; urgency=medium
-  
-  * Fix missing await in ws_voter keepalive (fix #191)
-  * Fix reloading user database when called in USR1 handler (fix #192)
-  * Only enable Apache2 modules in postinst when apache2 is installed (fix #195)
-  * Re-add missing python3-websockets dependency in debian/control (fix #196)
-  * Fix default CSS custom variables to match core code (fix #197)
-  * Fix and enforce correct mode and owner on password-containing files (fix #201)
+asl-usage (1.0.0-1.deb12) stable; urgency=medium
 
- -- Jason McCormick <jason@mfamily.org>  Fri, 22 Dec 2023 19:15:43 -0500
+  * Autobuild of 1.0.0-1 for deb12
 
-allmon3 (1.1.0-1) unstable; urgency=medium
+ -- Jason McCormick <jason@mfamily.org>  Sun, 09 Jun 2024 12:26:05 -0400
 
-  * Ensure ASLNodeDB objects are fully async and non-blocking (#185)
-  * Docker containers have provisional support (#182)
-  * Fix HTML page title (#186)
-  * Remove extraneous info-level logging for websocket-based classes 
-  * Better logging around database retrieval errors
-  * build for 1.1.1-1
+allmon3 (1.0.0-1) stable; urgency=medium
 
- -- Jason McCormick <jason@mfamily.org>  Fri, 22 Dec 2023 18:16:06 -0500
+  * Initial release 
 
-allmon3 (1.0.2-1) unstable; urgency=medium
-
-  * Provide Nginx configuration (#169)
-  * Fix CSS breakage from Bootstrap version upgrade (#180)
-  * Keyed node is now green highlited rather than beige (#181)
-
- -- Jason McCormick <jason@mfamily.org>  Sat, 18 Nov 2023 15:09:36 -0500
-
-allmon3 (1.0.1-1) unstable; urgency=medium
-
-  * Fix retry bug that caused silent crash in websocket handlers (#171)
-
- -- Jason McCormick <jason@mfamily.org>  Mon, 30 Oct 2023 19:32:40 -0400
-
-allmon3 (1.0.0-1) unstable; urgency=medium
-
-  * Release of major version 1.0.0
-  * From 0.11.6, implement asyncio stream code to replace tcp sockets
-
- -- Jason McCormick <jason@mfamily.org>  Fri, 29 Sep 2023 19:51:47 -0400
-
-allmon3 (0.11.6-1) unstable; urgency=medium
-
-  * Implement per-user node restrictions (#161)
-  * Display node uptime in header bar (#162)
-
- -- Jason McCormick <jason@mfamily.org>  Wed, 06 Sep 2023 13:05:56 -0400
-
-allmon3 (0.11.5-1) unstable; urgency=medium
-
-  * Don't fail node(s) that are unreachable on startup (#160)
-  * Pages with the same page#anchor now reload in the menu (#163)
-  * Better close of asyncio Tasks in the signal handler (#158)
-
- -- Jason McCormick <jason@mfamily.org>  Tue, 05 Sep 2023 11:15:25 -0400
-
-allmon3 (0.11.4-2) unstable; urgency=medium
-
-  * Attempt to clarify web client errors for different websocket problems
-    (#155)
-  * Add customziation for CONENCTING client lines in main.css/custom.css
-    (#148)
-  * Commands starting with 'voter' are only show on the voter page (#153)
-  * Commands starting with 'voter' are suppressed on the main page (#153)
-  * Removed links from the node header on the voter display (#153)
-  * iNodes multinode= leaking in non-displayed node data (#156)
-
- -- Jason McCormick <jason@mfamily.org>  Sun, 06 Aug 2023 13:16:50 -0400
-
-allmon3 (0.11.3-1) unstable; urgency=medium
-
-  * Fix issue with WebKit-based browser (Safari) not reloading
-    websockets on page-back navigation (#151)
-  * Fix parsing of Asterisk 1.4 commands with voter output (#152)
-  * Fix issue with nulls turning into text "None" in JSON API calls (#154)
-
- -- Jason McCormick <jason@mfamily.org>  Thu, 13 Jul 2023 12:07:50 -0400
-
-allmon3 (0.11.2-2) unstable; urgency=medium
-
-  * Updated the logic of sockets management/retries (#138, #149, #150)
-  * Fix issue for node-overrides not in the core database (#147)
-
- -- Jason McCormick <jason@mfamily.org>  Fri, 30 Jun 2023 13:11:00 -0400
-
-allmon3 (0.11.1-1) unstable; urgency=medium
-
-  * Fix error when node-overrides tries to override a non-existing node
-  * Split out Debian 10 packaging
-
- -- Jason McCormick <jason@mfamily.org>  Tue, 20 Jun 2023 18:23:11 -0400
-
-allmon3 (0.11.0-1) unstable; urgency=medium
-
-  * Complete installation by apt/dpkg into a basic working Allmon3
-  * Implementation of per-node commands in web.ini
-  * IP binding is now configurable
-  * menu.ini ordering is now preserved in the web interface
-  * Fix compatability in asyncio with Python 3.7 for Debian 10 support
-  * Cleanup of JavaScript code
-  * Handle additional network-related error conditions for AMI connections
-
-
- -- Jason McCormick <jason@mfamily.org>  Sat, 17 Jun 2023 15:57:35 -0400
-
-allmon3 (0.10.2-2) unstable; urgency=medium
-
-  * Support per-node command templates (see web.ini)
-  * Retain order of menu.ini submenus in the HTML dropdown 
-  * Add the command modals to the voter display page
-  * Implement binding IP configuration directive (see web.ini)
-  * allmon3_server objects now listen on all IPs by default
-  * Fix apache.conf RewriteRule for v0.10
-  * Expose in-browser websocket errors to the UI
-  * Fix string formatting error for remote transmission status
-  * Fix dependency issues in allmon3.service systemd service
-
- -- Jason McCormick <jason@mfamily.org>  Sat, 17 Jun 2023 09:22:13 -0400
-
-allmon3 (0.10.1-1) unstable; urgency=medium
-
-  * Fix .deb packaging issues
-  * Implement keepalive cycles
-
- -- Jason McCormick <jason@mfamily.org>  Mon, 22 May 2023 12:14:06 -0400
-
-allmon3 (0.10.0-3) unstable; urgency=medium
-
-  * Nearly-complete rewrite from Beta 0.9
-  * Configuration files from Beta 0.9 are likely incompatible
-  * Review configuration files in /usr/share/doc/allmon3 and fix files from
-    beta 0.9 accordingly 
-  * Apache configuration is fundamentally different
-  * Debian 10 / Raspian 10 is now semi-supported
-
-
- -- Jason McCormick <jason@mfamily.org>  Fri, 26 May 2023 18:22:46 -0400
-
-allmon3 (0.9.7-1) unstable; urgency=medium
-
-  * INCOMPATIBLE CHANGE: ip= fields in allmon3.ini and
-  *  votermon.ini are now host= (or related names) and 
-  *  can specify an IPv4, IPv6, or DNS item
-  * Private node labels supported in web.ini
-  * asl-{statmon,cmdlink,votermon} now support DNS and IPv6
-  * All stock configs and readme info now in /usr/share/doc/allmon3
-
- -- Jason McCormick <jason@mfamily.org>  Fri, 26 May 2023 18:18:01 -0400
-
-allmon3 (0.9.6-1) unstable; urgency=medium
-
-  * Implement subsecond polling as a option in `allmon3.ini`. When using the .deb file, `allmon3.ini` will not be updated with the newest information. See https://github.com/AllStarLink/Allmon3/commit/bda1e74e218c217e4381715297eaea72a8d2a236 for specifics
-  * Implement the voter functionality. Requires `voter.ini`. See `asl-votermon`.
-  * System commands are now configured in `web.ini`
-  * Customizable home button href in `web.ini`* 
-
- -- Jason McCormick <jason@mfamily.org>  Sat, 15 Apr 2023 13:05:02 -0400
-
-allmon3 (0.9.5-1) unstable; urgency=medium
-
-  * Initial complete release of Allmon3 as beta
-
- -- Jason McCormick <jason@mfamily.org>  Tue, 11 Apr 2023 13:51:08 -0400
+ -- Jason McCormick <jason@mfamily.org>  Sun, 09 Jun 2024 12:25:58 -0400
