--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+asl-usage (1.2.0-1) stable; urgency=medium
+
+  * Add daily reporting tables and route 
+
+ -- Jason McCormick <jason@mfamily.org>  Tue, 11 Jun 2024 19:06:04 -0400
+
 asl-usage (1.1.0-1) stable; urgency=medium
 
   * Add basic reporting
