--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+asl-usage (1.2.1-1) stable; urgency=medium
+
+  * Fix column off-by-one error 
+
+ -- Jason McCormick <jason@mfamily.org>  Tue, 11 Jun 2024 19:25:21 -0400
+
 asl-usage (1.2.0-1) stable; urgency=medium
 
   * Add daily reporting tables and route 
