--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+asl-usage (1.3-1) stable; urgency=medium
+
+  * Add 'radio' as channel type (#4)
+  * Parameterize REPLACE INTO queiry
+
+ -- Jason McCormick <jason@mfamily.org>  Wed, 19 Jun 2024 09:33:28 -0400
+
 asl-usage (1.2.1-1) stable; urgency=medium
 
   * Fix column off-by-one error 
