--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+asl-usage (1.3.1-1) stable; urgency=medium
+
+  * 'radio' and 'USBRadio' are the same 
+
+ -- Jason McCormick <jason@mfamily.org>  Thu, 20 Jun 2024 11:13:42 -0400
+
 asl-usage (1.3-1) stable; urgency=medium
 
   * Add 'radio' as channel type (#4)
