--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+asl-usage (1.4.0-1) stable; urgency=medium
+
+  * Add reporting on architecture
+  * Other fixes 
+
+ -- Jason McCormick <jason@mfamily.org>  Thu, 04 Jul 2024 11:34:28 -0400
+
 asl-usage (1.3.2-1) stable; urgency=medium
 
   * Fix captiazliation of "Radio" for USBRadio 
